--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,31 @@
 /*  your css code here. If applicable */
+.container{
+	background-color: rgb(202, 197, 197);
+	width:350px;
+	height: 150px;
+	border: 3px solid black;
+	border-radius: 30px;
+	display: flex;
+	padding: 20px;
+	align-items: center;
+	gap: 15px;
+}
+
+.yellow{
+	background-color: yellow;
+	width:100px;
+	height: 100px;
+	border-radius: 1000px;
+}
+.green{
+	background-color: green;
+	width:100px;
+	height: 100px;
+	border-radius: 1000px;
+}
+.red{
+	background-color: red;
+	width:100px;
+	height: 100px;
+	border-radius: 1000px;
+}
